@@ -74,16 +74,16 @@ fi
 
 if test "$WINDOWING_SYSTEM" = "-DXWIN"; then
 	echo "Smells like X11"
-	TOP_LEVEL_SUBDIRS="audio conf pathfinder files"
+	TOP_LEVEL_SUBDIRS="audio conf pathfinder files flic"
 	AUDIO_LIBRARY="-Laudio -laudio"
 	AUDIO_INCLUDES="-Iaudio"
 	EXE_TARGET="exult"
-	SYSLIBS="-L /usr/X11R6/lib -L /usr/local/lib -lX11 -lXext -lstdc++ -lgcc -lc -lgcc -Lconf -lconf -lpathfinder -Lfiles -lu7file"
+	SYSLIBS="-L /usr/X11R6/lib -L /usr/local/lib -lX11 -lXext -lstdc++ -lgcc -lc -lgcc -Lconf -lconf -lpathfinder -Lfiles -lu7file -Lflic -lflic"
 else
 	echo "Umm. Doesn't seem to be X11."
 	echo "Let's assume it's Windows as an alternative."
 	WINDOWING_SYSTEM="-DWIN32"
-	TOP_LEVEL_SUBDIRS="audio conf pathfinder files"
+	TOP_LEVEL_SUBDIRS="audio conf pathfinder files flic"
 	AUDIO_LIBRARY="-Laudio -laudio -lwinmm"
 	AUDIO_INCLUDES="-Iaudio"
 	EXE_TARGET="exult.exe"
@@ -245,4 +245,5 @@ audio/Makefile \
 audio/midi_drivers/Makefile \
 conf/Makefile \
 files/Makefile \
-pathfinder/Makefile)
+pathfinder/Makefile \
+flic/Makefile )
