@@ -3,3 +3,4 @@ Makefile
 *.o
 *~
 *.a
+filetest
